# boxer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: sprites.json  tiles.json
src/engine/: CMakeLists.txt
src/engine/include/engine/core/: Engine.h  Scene.h  SceneManager.h
src/engine/include/engine/gfx/: Animation.h  AnimationController.h  Camera2D.h  GLContext.h  GLFunctions.h  GLUtils.h  IndexBuffer.h  QuadVertex.h  Renderer2D.h  Shader.h  SpriteSheet.h  Texture2D.h  TextureCache.h  Tilemap.h  VertexArray.h  VertexBuffer.h
src/engine/include/engine/math/: Mat3.h  Mat4.h  MathUtils.h  Vec2.h  Vec4.h
src/engine/include/engine/physics/: Collision.h
src/engine/include/engine/platform/: Input.h  Window.h
src/engine/include/engine/utils/: JsonParser.h
src/engine/src/: stb_image.cpp
src/engine/src/core/: Engine.cpp  SceneManager.cpp
src/engine/src/gfx/: AnimationController.cpp  Camera2D.cpp  GLContext.cpp  GLFunctions.cpp  IndexBuffer.cpp  Renderer2D.cpp  Shader.cpp  SpriteSheet.cpp  Texture2D.cpp  TextureCache.cpp  Tilemap.cpp  VertexArray.cpp  VertexBuffer.cpp
src/engine/src/platform/: Input.cpp  Window.cpp
src/engine/src/utils/: JsonParser.cpp
src/runtime/: CMakeLists.txt  main.cpp
